...
    "Duration" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Duration" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "時長" } }
      }
    },
    "Edit schedule" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Edit schedule" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "編輯課表" } }
      }
    },
    "Course not found" : {
...
    "Diagnostics" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Diagnostics" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "診斷" } }
      }
    },
    "Documents" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Documents" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "文件" } }
      }
    },
    "Dotted" : {
...
    "Eraser" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Eraser" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "橡皮擦" } }
      }
    },
    "Favorites" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Favorites" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "喜好項目" } }
      }
    },
    "Grid" : {
...
    "Title" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Title" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "標題" } }
      }
    },
    "Trash" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Trash" } },
        "zh-Hant" : { "stringUnit" : { "state" : "translated", "value" : "垃圾桶" } }
      }
    },
    "Trash is empty" : {
...
